<resources>
    <string name="app_name">爱淘</string>
    <string name="mobile_number">手机号</string>
    <string name="password">密码</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码?</string>
    <string name="click_send">点击发送</string>
    <string name="verification">验证码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="confirm">确认</string>
    <string name="mine">我的</string>
    <string name="user_headimg">用户头像</string>
    <string name="user_nickname">用户昵称</string>
    <string name="purchase_record">购买记录</string>
    <string name="sale_record">销售记录</string>
    <string name="my_wallet">我的钱包</string>
    <string name="set">设置</string>
    <string name="exit">退出</string>
    <string name="send">发送</string>
    <string name="set_name">修改用户名</string>
    <string name="input_new_name">输入新的用户名</string>
    <string name="input_feedback_content">输入你想反馈给我们的信息</string>
    <string name="store">商城</string>
    <string name="my_balance">我的余额</string>
    <string name="yuan">元</string>
    <string name="top_up">充值</string>
    <string name="store_income">店铺收入</string>
    <string name="feedback">反馈</string>
    <string name="developer">开发者</string>
    <string name="version_num">版本号</string>
    <string name="logout">退出登陆</string>
    <string name="loading">加载中…</string>
    <string name="store_infor">店铺信息</string>
    <string name="head">头像</string>
    <string name="store_name">店名</string>
    <string name="store_introduction">店铺简介</string>
    <string name="store_information">店铺信息</string>
    <string name="goods_information">商品详情</string>
    <string name="purchase">购买</string>
    <string name="comment">评论</string>
    <string name="confirm_order">确认订单</string>
    <string name="total">总计</string>
    <string name="address">收货地址</string>
    <string name="input_address">请输入收货地址</string>
    <string name="purchase_success">购买成功</string>
    <string name="return_store">返回店铺</string>
    <string name="comment_now">立即评论</string>
    <string name="input_comment">请输入评论内容</string>
    <string name="my_store">我的店铺</string>
    <string name="no_store">您还没有店铺哦</string>
    <string name="create_store">新建店铺</string>
    <string name="edit">编辑</string>
    <string name="input_store_name">输入新的店铺名</string>
    <string name="purchase_now">立即购买</string>
    <string name="see_comment">查看评论</string>
    <string name="edit_goods">编辑商品</string>
    <string name="create_goods">创建商品</string>
    <string name="price">价格</string>
</resources>
