<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:background="#ffffff">

        <ImageView
            android:id="@+id/id_btn_mywallet_back"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:src="@drawable/icon_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/my_wallet"
            android:textColor="#333"
            android:textSize="17sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#aaa" />

    <com.mingle.widget.LoadingView
        android:id="@+id/id_load_mywallet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:loadingText="@string/loading" />

    <LinearLayout
        android:id="@+id/id_ll_mywallet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="106dp"
            android:background="#ffffff"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:paddingTop="22dp">

            <TextView
                android:id="@+id/id_tv_mywallet_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_balance"
                android:textColor="#707070"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/id_tv_mywallet_balancenum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/id_tv_mywallet_balance"
                android:ellipsize="end"
                android:maxLength="10"
                android:text="0.00"
                android:textColor="@color/colorTheme"
                android:textSize="40sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/id_tv_mywallet_balancenum"
                android:layout_toRightOf="@+id/id_tv_mywallet_balancenum"
                android:text="@string/yuan"
                android:textColor="#707070"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/id_btn_mywallet_topup"
                android:layout_width="42dp"
                android:layout_height="22dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/btn_register"
                android:gravity="center"
                android:text="@string/top_up"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="#ffffff"
            android:paddingLeft="18dp"
            android:paddingRight="18dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/store_income"
                android:textColor="#333"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/id_tv_mywallet_storeincome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="0.0"
                android:textColor="#707070"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>