<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_marginRight="45dp"
        android:layout_marginLeft="45dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/id_img_login_logo"
            android:layout_width="64dp"
            android:layout_height="75dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="65dp"
            android:src="@drawable/icon_login_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/id_img_login_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:text="@string/app_name"
            android:textColor="@color/colorTheme"
            android:textSize="17sp" />

        <ImageView
            android:layout_marginBottom="8dp"
            android:layout_alignBottom="@+id/id_v_login_line1"
            android:src="@drawable/icon_login_phonenumber"
            android:layout_width="15dp"
            android:layout_height="15dp" />

        <EditText
            android:maxLength="11"
            android:maxLines="1"
            android:id="@+id/id_et_login_pn"
            android:textColor="@color/colorEditText"
            android:textColorHint="@color/colorHint"
            android:textSize="14sp"
            android:layout_marginBottom="8dp"
            android:hint="@string/mobile_number"
            android:background="@null"
            android:layout_marginLeft="39dp"
            android:layout_alignBottom="@+id/id_v_login_line1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text" />
        <View
            android:layout_marginTop="305dp"
            android:id="@+id/id_v_login_line1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorLine"/>
        <ImageView
            android:layout_marginBottom="8dp"
            android:layout_alignBottom="@+id/id_v_login_line2"
            android:src="@drawable/icon_login_password"
            android:layout_width="15dp"
            android:layout_height="15dp" />

        <EditText
            android:maxLines="1"
            android:id="@+id/id_et_login_pw"
            android:textColorHint="@color/colorHint"
            android:textColor="@color/colorEditText"
            android:textSize="14sp"
            android:layout_marginBottom="8dp"
            android:hint="@string/password"
            android:background="@null"
            android:layout_marginLeft="39dp"
            android:layout_alignBottom="@+id/id_v_login_line2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
        <View
            android:layout_marginTop="54dp"
            android:layout_below="@+id/id_v_login_line1"
            android:id="@+id/id_v_login_line2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorLine"/>

        <TextView
            android:id="@+id/id_btn_login_forget"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorHint"
            android:textSize="11sp"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:layout_below="@id/id_v_login_line2"
            />
        
        <TextView
            android:layout_centerHorizontal="true"
            android:id="@+id/id_btn_login_login"
            android:layout_marginTop="46dp"
            android:textColor="#fff"
            android:textSize="14sp"
            android:gravity="center"
            android:text="@string/login"
            android:layout_below="@id/id_v_login_line2"
            android:background="@drawable/btn_login"
            android:layout_width="270dp"
            android:layout_height="40dp" />
        <TextView
            android:layout_centerHorizontal="true"
            android:id="@+id/id_btn_login_register"
            android:layout_marginTop="18dp"
            android:textColor="#aaa"
            android:textSize="14sp"
            android:gravity="center"
            android:text="@string/register"
            android:layout_below="@id/id_btn_login_login"
            android:background="@drawable/btn_register"
            android:layout_width="270dp"
            android:layout_height="40dp" />

    </RelativeLayout>

    

</LinearLayout>