<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:background="@drawable/btn_register"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="300dp">
        <ImageView
            android:layout_marginTop="40dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/icon_window_purchase"
            android:id="@+id/id_img_success"
            android:layout_width="108dp"
            android:layout_height="80dp" />
        <TextView
            android:textSize="20sp"
            android:textColor="@color/colorTheme"
            android:layout_marginTop="22dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/id_img_success"
            android:text="@string/purchase_success"
            android:id="@+id/id_tv_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textSize="14sp"
            android:textColor="#fff"
            android:gravity="center"
            android:text="@string/comment_now"
            android:layout_marginTop="25dp"
            android:background="@drawable/btn_login"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/id_tv_success"
            android:id="@+id/id_btn_success"
            android:layout_width="174dp"
            android:layout_height="40dp" />

        <TextView
            android:gravity="center"
            android:text="@string/return_store"
            android:textColor="#707070"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/id_btn_success"
            android:background="@drawable/btn_register"
            android:id="@+id/id_btn_success_return"
            android:layout_width="174dp"
            android:layout_height="40dp" />
    </RelativeLayout>


</LinearLayout>