<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <RelativeLayout
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="47dp">

        <ImageView
            android:layout_centerVertical="true"
            android:id="@+id/id_btn_edit_back"
            android:layout_marginLeft="12dp"
            android:src="@drawable/icon_back"
            android:layout_width="15dp"
            android:layout_height="15dp" />
        <TextView
            android:id="@+id/id_tv_edit_title"
            android:textColor="#333"
            android:textSize="17sp"
            android:layout_centerInParent="true"
            android:text="@string/set_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_centerVertical="true"
            android:id="@+id/id_btn_edit_confirm"
            android:layout_marginRight="14dp"
            android:layout_alignParentRight="true"
            android:text="@string/confirm"
            android:textColor="@color/colorTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#aaa"/>
    <LinearLayout
        android:background="#ffffff"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:textSize="14sp"
            android:id="@+id/id_et_edit"
            android:textColor="#333"
            android:textColorHint="#707070"
            android:hint="@string/input_new_name"
            android:paddingBottom="14dp"
            android:paddingTop="14dp"
            android:paddingRight="12dp"
            android:paddingLeft="12dp"
            android:gravity="left|top"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>