<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <ImageView
        android:id="@+id/id_btn_forget_back"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/icon_back" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp">
        <ImageView
            android:id="@+id/id_img_forget_logo"
            android:layout_width="64dp"
            android:layout_height="75dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="65dp"
            android:src="@drawable/icon_login_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/id_img_forget_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:text="@string/app_name"
            android:textColor="@color/colorTheme"
            android:textSize="17sp" />

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignBottom="@+id/id_v_forget_line1"
            android:layout_marginBottom="8dp"
            android:src="@drawable/icon_login_phonenumber" />

        <EditText
            android:maxLines="1"
            android:maxLength="11"
            android:id="@+id/id_et_forget_pn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/id_v_forget_line1"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="39dp"
            android:background="@null"
            android:hint="@string/mobile_number"
            android:inputType="text"
            android:textColor="@color/colorEditText"
            android:textColorHint="@color/colorHint"
            android:textSize="14sp" />

        <View
            android:background="@color/colorLine"
            android:id="@+id/id_v_forget_line1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="305dp"/>

        <ImageView
            android:layout_marginBottom="8dp"
            android:layout_alignBottom="@+id/id_v_forget_line3"
            android:src="@drawable/icon_login_verification"
            android:layout_width="15dp"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/id_btn_forget_send"
            android:textColor="#aaa"
            android:textSize="11sp"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="8dp"
            android:layout_alignBottom="@+id/id_v_forget_line2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_send"/>

        <EditText
            android:maxLines="1"
            android:id="@+id/id_et_forget_vc"
            android:textColorHint="@color/colorHint"
            android:textColor="@color/colorEditText"
            android:textSize="14sp"
            android:layout_marginBottom="8dp"
            android:hint="@string/verification"
            android:background="@null"
            android:layout_marginLeft="39dp"
            android:layout_alignBottom="@+id/id_v_forget_line2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number" />
        <View
            android:layout_marginTop="54dp"
            android:layout_below="@+id/id_v_forget_line1"
            android:id="@+id/id_v_forget_line2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorLine"/>

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignBottom="@+id/id_v_forget_line2"
            android:layout_marginBottom="8dp"
            android:src="@drawable/icon_login_password" />

        <EditText
            android:maxLines="1"
            android:id="@+id/id_et_forget_np"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/id_v_forget_line3"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="39dp"
            android:background="@null"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:textColor="@color/colorEditText"
            android:textColorHint="@color/colorHint"
            android:textSize="14sp" />

        <View
            android:id="@+id/id_v_forget_line3"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/id_v_forget_line2"
            android:layout_marginTop="54dp"
            android:background="@color/colorLine" />

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignBottom="@+id/id_v_forget_line4"
            android:layout_marginBottom="8dp"
            android:src="@drawable/icon_login_password" />

        <EditText
            android:maxLines="1"
            android:id="@+id/id_et_forget_cp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/id_v_forget_line4"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="39dp"
            android:background="@null"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColor="@color/colorEditText"
            android:textColorHint="@color/colorHint"
            android:textSize="14sp" />

        <View
            android:id="@+id/id_v_forget_line4"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/id_v_forget_line3"
            android:layout_marginTop="54dp"
            android:background="@color/colorLine" />
        <TextView
            android:layout_centerHorizontal="true"
            android:id="@+id/id_btn_forget_confirm"
            android:layout_marginTop="34dp"
            android:textColor="#fff"
            android:textSize="14sp"
            android:gravity="center"
            android:text="@string/confirm"
            android:layout_below="@id/id_v_forget_line4"
            android:background="@drawable/btn_login"
            android:layout_width="270dp"
            android:layout_height="40dp" />
    </RelativeLayout>

</RelativeLayout>