<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:background="#ffffff">

        <ImageView
            android:id="@+id/id_btn_set_back"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:src="@drawable/icon_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/set"
            android:textColor="#333"
            android:textSize="17sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#ddd" />

    <RelativeLayout
        android:id="@+id/id_rl_set_feedback"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="#ffffff"
        android:paddingLeft="18dp"
        android:paddingRight="18dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/feedback"
            android:textColor="#333"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="7dp"
            android:layout_height="13dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_arrow" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#ddd"/>
    <RelativeLayout
        android:id="@+id/id_rl_set_developers"
        android:background="#ffffff"
        android:paddingRight="18dp"
        android:paddingLeft="18dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:textSize="14sp"
            android:textColor="#333"
            android:layout_centerVertical="true"
            android:text="@string/developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/icon_arrow"
            android:layout_width="7dp"
            android:layout_height="13dp" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#ddd"/>
    <RelativeLayout
        android:background="#ffffff"
        android:paddingRight="18dp"
        android:paddingLeft="18dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:textSize="14sp"
            android:textColor="#333"
            android:layout_centerVertical="true"
            android:text="@string/version_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="#707070"
            android:textSize="14sp"
            android:text="1.0"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</LinearLayout>